# learning

./: .gitignore  README.md  README_zh.md
android/: README.md
assembly/: README.md
cpp/STL/: README.md  draft01_datetime.cpp  draft_complex.cpp  draft_ctime.cpp  draft_exception.cpp  draft_map.cpp  draft_misc.cpp  draft_numeric.cpp  draft_random.cpp  draft_set.cpp  draft_shared_ptr.cpp  draft_stream.cpp  draft_string.cpp  draft_tuple.cpp  draft_vector.cpp  zcutils.cpp
cpp/boost/: README.md  draft00.cpp  draft01.cpp
cpp/c/: README.md  draft00.c  draft01.c
cpp/catch2/: README.md
cpp/catch2/ws00/: CMakeLists.txt  test00.cpp
cpp/cmake/: README.md
cpp/cmake/ws00/: CMakeLists.txt  draft00.cpp
cpp/cmake/ws02/step1/: CMakeLists.txt  utils.lib
cpp/cmake/ws04/: CMakeLists.txt  utils.cpp  utils.hpp
cpp/cmake/ws06/: CMakeLists.txt  draft00.cpp  draft00.hpp.in
cpp/cmake/ws99_TBC/: CMakeLists.txt  draft00.cpp
cpp/cmake/ws99_TBC/tools/: CMakeLists.txt
cpp/cpp/: README.md
cpp/cxxopts/: README.md  draft_argparse.cpp  zcutils.hpp
cpp/eigen/: README.md  draft00.cpp  draft01.cpp
cpp/fmt/: README.md
cpp/gdb/: README.md
cpp/itensor/: README.md  draft00.cpp
cpp/json/: README.md  draft00.cpp  draft01.cpp
cpp/lapack/: README.md  draft00.cpp  draft_ddot.cpp
cpp/llvm/: README.md  hello.bc  hello.c
cpp/magma/: README.md
cpp/meson/: README.md
cpp/mpi/: README.md  draft00.cpp
cpp/openblas/: README.md  draft00.c
cpp/openmp/: README.md  draft00.cpp
cpp/qbox/: README.md  draft00.py
cpp/visual_studio/: README.md
csharp/: README.md  draft00.cs
cuda/cuda/: CMakeLists.txt  README.md  README_deprecated.md  draft00.cu  draft01.cu  draft02.cu  draft03.cu
cuda/cuda/history_file/: draft00.cu  draft_basic_math.cu  draft_julia.cu  draft_julia.py  draft_misc.cu
cuda/cuda/history_file/ws_cmake/: CMakeLists.txt  draft_julia.cu  draft_julia.py
cuda/cuda/include/: README.md
cuda/thrust/: README.md
cuda/thrust/ws00/: CMakeLists.txt  README.md  draft00.cu
cypher/: cypher.md  demo.md  function.md
fortran/: README.md  draft00.f90
go/caddy/: README.md  example00.json  example01.json  example02_domain.json  example03_domain_proxy.json
html/: README.md
html/ws00/: main01.html  main02.html  main03.html  main04.html  main05.html
html/ws01/: main01.html
java/java/: README.md
java/maven/: README.md
javascript/: README.md  draft00.html  draft00.js
javascript/javascript/: draft01.js
javascript/nextjs/: README.md  index00.html  index01.html  index02.html
javascript/npm/: README.md
javascript/tailwindcss/: README.md
julia/DataFrames/: README.md  draft00.jl
julia/LinearAlgebra/: README.md  draft00.jl
julia/Pkg/: README.md
julia/Plots/: README.md  draft00.jl
julia/Revise/: README.md
julia/convex/: README.md  draft00.jl
julia/cuda/: README.md  draft00.jl
julia/gadfly/: README.md
julia/ijulia/: README.md
julia/julia/: README.md  demo_function.jl  draft00.jl  draft01.jl
julia/optim/: README.md  draft00.jl
julia/progressbars/: README.md
julia/pycall/: README.md
julia/quadgk/: README.md  draft00.jl
latex/: README.md
latex/bib/: README.md  draft_biblatex.tex  draft_natbib.tex
latex/exam/: README.md
latex/latex/: README.md  draft01_format.tex  draft02_table01.tex  draft02_table_fig.tex  draft03_structure.tex  draft04_bib.tex  draft05_math_misc.tex  draft06_theorem.tex  draft07_book.tex  draft08_revtex_a.tex  draft09_hyperref.tex  draft_algorithm.tex  draft_tikz.tex
latex/latexdiff/: README.md  diff.tex  draft01.tex
latex/multilanguage/: README.md  draft00.tex
latex/quantikz/: draft00.tex
latex/tectonic/: README.md
latex/ws00/: draft00_cn.tex  draft00_en.tex  draft00_math.tex  draft02_table_fig.tex  draft04_bib01.tex  draft08_revtex.tex
latex/ws_lyx/: draft00.lyx
lean/: README.md  draft00.lean
linux/docker/: README.md
linux/kubernetes/: README.md
linux/linux/: draft_ripgrep.sh
linux/make/: README.md
linux/shell/: course_bash.md  draft00.sh  draft01.sh
linux/tcltk/: README.md  draft_tk00.tcl
linux/vasp/: README.md
linux/vim/: README.md
matlab/cvx/: README.md  draft00.m
matlab/gpu/: README.md  draft00.m  draft_mandelbrot.m
matlab/matlab/: README.md  demo_figure.m  demo_fsolve.m  demo_regex.m  demo_sparse.m  demo_statistics_ML_toolbox.m  demo_string.m  demo_symbolic.m  draft00.m  draft_lu.m  mailto.m  test_linalg.m  test_test.m  zcnote.md
matlab/oop/: Class01.m  EnumClass.m  README.md
misc/: README.md  bazel.md  browser_search.md  chatgpt.md  git.md  macos.md  markdown.md  midjourney.md  msys2.md  raspberrypi.md  slurm.md  transifex.md  ttrss.md  v2ray.md  vscode.md  windows_subsystem_for_linux.md  zulip.md
misc/gap/: README.md  draft00.g
misc/linux/: README.md  README_software.md
misc/v2fly/: README.md  config00-c.json  config00-s.json
mma/gtpack/: README.md  draft00.wls
mma/mma/: README.md  draft00.nb  draft00.wls  draft01.nb  mma_figure.nb  mma_nlp.nb
mongodb/: README.md  draft00.py  draft01.py  utils.py
mysql/: README.md  draft00.py  draft01.py  draft02.py  init_data.sql  zcnote_postgreSQL.md
perl/: draft00.pl
powershell/: README.md  draft00.ps1  draft01.ps1  draft02.ps1
python/STDL/: README.md  (+54 more)
python/pybind11/ws_numpy_pybind11_nvcc/: CMakeLists.txt  GPUutils.cu  GPUutils.hpp  cdraft00.cpp  setup.py  test_basic.py  utils.cpp  utils.hpp  wrapper.cpp
r/: README.md
rust/: README.md  draft00.rs
rust/crypto/ws00/: Cargo.toml
rust/crypto/ws00/src/: demo_aead.rs  demo_hmac.rs  demo_pmac.rs  demo_tfhe.rs  main.rs
rust/rust/ws01_misc/: Cargo.toml  README.md
tcltk/: draft00.tcl
user-guide/: README.md
(+1219 files in other folders)
